k8s/deployment.yml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: 2017-10-21T07:56:52Z
  generation: 2
  labels:
    run: geth
  name: geth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: geth
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: geth
    spec:
      volumes:
      - name: test-volume
        # This GCE PD must already exist.
        gcePersistentDisk:
          pdName: disk-1
          fsType: ext4
 
      containers:
      - image: gcr.io/etherproxy-183606/hello-node:v8
        imagePullPolicy: IfNotPresent
        name: geth
        
        volumeMounts:
        - mountPath: /shared-data
          name: test-volume
  
        ports:
        - containerPort: 8545
          protocol: TCP
        - containerPort: 30303
          protocol: UDP

        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
