k8s/service.yml

apiVersion: v1
kind: Service
metadata:
  name: geth-service
  labels:
    run: geth-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8545
    protocol: TCP
    nodePort: 31707
    name: http
  - port: 30303
    protocol: UDP
    targetPort: 30303
    nodePort: 30303
    name: devp2p
  selector:
    run: geth
